var _application_2obj_2_debug_2net7_80_2_protos_2_class_entity_8cs =
[
    [ "gRPCClient.ClassData", "classg_r_p_c_client_1_1_class_data.html", "classg_r_p_c_client_1_1_class_data" ],
    [ "gRPCClient.ClassEntityCreation", "classg_r_p_c_client_1_1_class_entity_creation.html", "classg_r_p_c_client_1_1_class_entity_creation" ],
    [ "gRPCClient.RequestCreateClassEntity", "classg_r_p_c_client_1_1_request_create_class_entity.html", "classg_r_p_c_client_1_1_request_create_class_entity" ],
    [ "gRPCClient.ResponseCreateClassEntity", "classg_r_p_c_client_1_1_response_create_class_entity.html", "classg_r_p_c_client_1_1_response_create_class_entity" ],
    [ "gRPCClient.RequestGetClassEntity", "classg_r_p_c_client_1_1_request_get_class_entity.html", "classg_r_p_c_client_1_1_request_get_class_entity" ],
    [ "gRPCClient.ResponseGetClassEntity", "classg_r_p_c_client_1_1_response_get_class_entity.html", "classg_r_p_c_client_1_1_response_get_class_entity" ],
    [ "gRPCClient.RequestGetClassEntityByStudentUsername", "classg_r_p_c_client_1_1_request_get_class_entity_by_student_username.html", "classg_r_p_c_client_1_1_request_get_class_entity_by_student_username" ],
    [ "gRPCClient.RequestGetClassEntities", "classg_r_p_c_client_1_1_request_get_class_entities.html", "classg_r_p_c_client_1_1_request_get_class_entities" ],
    [ "gRPCClient.ResponseGetClassEntities", "classg_r_p_c_client_1_1_response_get_class_entities.html", "classg_r_p_c_client_1_1_response_get_class_entities" ],
    [ "gRPCClient.RequestUpdateClassParticipants", "classg_r_p_c_client_1_1_request_update_class_participants.html", "classg_r_p_c_client_1_1_request_update_class_participants" ],
    [ "gRPCClient.ResponseUpdateClassParticipants", "classg_r_p_c_client_1_1_response_update_class_participants.html", "classg_r_p_c_client_1_1_response_update_class_participants" ],
    [ "gRPCClient.RequestGetClassParticipants", "classg_r_p_c_client_1_1_request_get_class_participants.html", "classg_r_p_c_client_1_1_request_get_class_participants" ],
    [ "gRPCClient.ResponseGetClassParticipants", "classg_r_p_c_client_1_1_response_get_class_participants.html", "classg_r_p_c_client_1_1_response_get_class_participants" ],
    [ "gRPCClient.RequestGetClassAttendance", "classg_r_p_c_client_1_1_request_get_class_attendance.html", "classg_r_p_c_client_1_1_request_get_class_attendance" ],
    [ "gRPCClient.ResponseGetClassAttendance", "classg_r_p_c_client_1_1_response_get_class_attendance.html", "classg_r_p_c_client_1_1_response_get_class_attendance" ],
    [ "gRPCClient.RequestGetClassAttendanceByUsername", "classg_r_p_c_client_1_1_request_get_class_attendance_by_username.html", "classg_r_p_c_client_1_1_request_get_class_attendance_by_username" ],
    [ "gRPCClient.ResponseGetClassAttendanceByUsername", "classg_r_p_c_client_1_1_response_get_class_attendance_by_username.html", "classg_r_p_c_client_1_1_response_get_class_attendance_by_username" ],
    [ "pb", "_application_2obj_2_debug_2net7_80_2_protos_2_class_entity_8cs.html#a3a8b1403f9034aa88aad1ce2c733db60", null ],
    [ "pbc", "_application_2obj_2_debug_2net7_80_2_protos_2_class_entity_8cs.html#acf353ca81053b715ef0a189df5a75499", null ],
    [ "pbr", "_application_2obj_2_debug_2net7_80_2_protos_2_class_entity_8cs.html#a4c9bca18934bf8b310b9d65812404c69", null ],
    [ "scg", "_application_2obj_2_debug_2net7_80_2_protos_2_class_entity_8cs.html#a6de48d7be2d1c733071a3f897657ee05", null ]
];