var searchData=
[
  ['classclient_0',['ClassClient',['../class_application_1_1g_r_p_c_clients_1_1_class_client.html',1,'Application::gRPCClients']]],
  ['classcreationdto_1',['ClassCreationDTO',['../class_domain_1_1_d_t_os_1_1_class_d_t_o_1_1_class_creation_d_t_o.html',1,'Domain::DTOs::ClassDTO']]],
  ['classdata_2',['ClassData',['../classg_r_p_c_client_1_1_class_data.html',1,'gRPCClient']]],
  ['classentity_3',['ClassEntity',['../class_domain_1_1_models_1_1_class_entity.html',1,'Domain::Models']]],
  ['classentitycreation_4',['ClassEntityCreation',['../classg_r_p_c_client_1_1_class_entity_creation.html',1,'gRPCClient']]],
  ['classentityserviceclient_5',['ClassEntityServiceClient',['../classg_r_p_c_client_1_1_class_entity_service_1_1_class_entity_service_client.html',1,'gRPCClient::ClassEntityService']]],
  ['classescontroller_6',['ClassesController',['../class_web_a_p_i_1_1_controllers_1_1_classes_controller.html',1,'WebAPI::Controllers']]],
  ['classlogic_7',['ClassLogic',['../class_application_1_1_logic_1_1_class_logic.html',1,'Application::Logic']]],
  ['classlogictests_8',['ClassLogicTests',['../classx_unit_1_1_tests_1_1_class_logic_tests.html',1,'xUnit::Tests']]],
  ['classupdatedto_9',['ClassUpdateDTO',['../class_domain_1_1_d_t_os_1_1_class_d_t_o_1_1_class_update_d_t_o.html',1,'Domain::DTOs::ClassDTO']]]
];
